crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select range_intersect_agg(nr) from numrange_test where false;
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..26 "range_intersect_agg"
      Ascii40@26..27 "("
      ColumnRef@27..29
        Ident@27..29 "nr"
  Ascii41@29..30 ")"
  Whitespace@30..31 " "
  From@31..35 "from"
  Whitespace@35..36 " "
  RangeVar@36..49
    Ident@36..49 "numrange_test"
  Whitespace@49..50 " "
  Where@50..55 "where"
  Whitespace@55..56 " "
  AConst@56..61
    FalseP@56..61 "false"
  Ascii59@61..62 ";"

