crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@93.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table numrange_test2(nr numrange);
---
CreateStmt@0..41
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "numrange_test2"
  Ascii40@27..28 "("
  ColumnDef@28..39
    Ident@28..30 "nr"
    Whitespace@30..31 " "
    TypeName@31..39
      Ident@31..39 "numrange"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

