crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@94.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index numrange_test2_hash_idx on numrange_test2 using hash (nr);
---
IndexStmt@0..71
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..36 "numrange_test2_hash_idx"
  Whitespace@36..37 " "
  On@37..39 "on"
  Whitespace@39..40 " "
  RangeVar@40..54
    Ident@40..54 "numrange_test2"
  Whitespace@54..55 " "
  Using@55..60 "using"
  Whitespace@60..61 " "
  Ident@61..65 "hash"
  Whitespace@65..66 " "
  Ascii40@66..67 "("
  IndexElem@67..69
    Ident@67..69 "nr"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

