crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test2 VALUES(numrange(1.1, 2.2,'()'));"
---
InsertStmt@0..59
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "numrange_test2"
  Whitespace@26..27 " "
  SelectStmt@27..56
    Values@27..33 "VALUES"
    Ascii40@33..34 "("
    List@34..56
      FuncCall@34..56
        Ident@34..42 "numrange"
        Ascii40@42..43 "("
        AConst@43..46
          Fconst@43..46 "1.1"
        Ascii44@46..47 ","
        Whitespace@47..48 " "
        AConst@48..51
          Fconst@48..51 "2.2"
        Ascii44@51..52 ","
        AConst@52..56
          Sconst@52..56 "'()'"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

